@@ -13,6 +13,7 @@ version <next>:
 - OpenH264 decoder wrapper
 - MediaCodec hwaccel
 - True Audio (TTA) muxer
+- crystalizer audio filter
 
 
 version 3.1:
